Fixed reference date.